Changed the h3 header type to an h4 header type and added a new header type to fill the place of the h3 header style.

--- a/main_style.css
+++ b/main_style.css
@@ -203,6 +203,7 @@ div.page_content {
   text-align: justify;
 }
 
+/* The stylings for the various kinds of headers. */
 h1 {
   border-bottom: 2px solid var(--color-gray);
   font-size: 1.5em;
@@ -228,9 +229,17 @@ h3 {
   font-family: Arial;
   font-weight: normal;
   font-style: italic;
+  margin-bottom: 0em;
+  text-align: center;
+}
+h4 {
+  font-size: 1.3em;
+  font-family: Arial;
+  font-weight: normal;
+  font-style: italic;
+  margin-bottom: 0em;
   padding-left: 1em;
   text-align: left;
-  line-height: 1.2em;
 }
 
 div.date {
