--- a/main_style.css
+++ b/main_style.css
@@ -199,6 +199,7 @@ div.page_content {
   font-family: Arial;
   padding-left: 2em;
   padding-right: 2em;
+  padding-bottom: 2em;
   line-height: 1.5em;
   text-align: justify;
 }
