--- a/main_style.css
+++ b/main_style.css
@@ -307,6 +307,13 @@ p.image_box {
   margin-bottom: 0.5em;
 }
 
+video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 0.7em;
+}
+
 blockquote {
   margin-left: 0px;
   margin-right: 0px;
