--- a/main_style.css
+++ b/main_style.css
@@ -311,6 +311,7 @@ video {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: calc(100% - 0.8em);
   border-radius: 0.7em;
 }
 
