--- a/main_style.css
+++ b/main_style.css
@@ -157,6 +157,7 @@ div.content_container {
 
   div.links {
     z-index: 1;
+    transform: translate(0px, -10em);
   }
 
   div.arrow_container svg {
